@startuml
'https://plantuml.com/class-diagram

class Solution41{
Solution41 sol
main()
ArrayList<String> nameSorter()
printOutResults()
}

Solution41 *-- main
main *-- addingNames
main *-- printOutResults
main : int count
main : Scanner inputFile
main : ArrayList<String> names
main : ArrayList<String> sortedNames
main : printOutResults
main : inputFile.close()
printOutResults :  FileWriter fileWriter
printOutResults : fileWriter.close()

class addingNames{
nameAdder()
}

addingNames *-- nameAdder
nameAdder : names.add()
nameAdder : return count

@enduml